# mfc_example

./: .gitignore
src/: CMakeLists.txt  vcpkg.json
src/CClientDemo/: CClientDemo.cpp  CClientDemo.h  CClientDemo.rc  CClientDemoDlg.cpp  CClientDemoDlg.h  CClientSocket.cpp  CClientSocket.h  resource.h
src/CClientDemo/res/: CClientDemo.rc2
src/CServerDemo/: CListenSocket.cpp  CListenSocket.h  CServer.cpp  CServer.h  CServerDemo.cpp  CServerDemo.h  CServerDemo.rc  CServerDemoDlg.cpp  CServerDemoDlg.h  CServerSocket.cpp  CServerSocket.h  resource.h
src/CServerDemo/res/: CServerDemo.rc2
src/FileMgr/: CMakeLists.txt  FileMgr.cpp  FileMgr.h  FileMgr.rc  FileMgrDlg.cpp  FileMgrDlg.h  resource.h
src/FileMgr/res/: FileMgr.rc2
src/GetKeyBoardRecord/: CMakeLists.txt  main.cpp
src/IPAddress/: IPAddress.cpp  IPAddress.h  IPAddress.rc  IPAddressDlg.cpp  IPAddressDlg.h  resource.h
src/IPAddress/res/: IPAddress.rc2
src/MyExplorer/: CHtmlCodeViewDlg.cpp  CHtmlCodeViewDlg.h  MainFrm.cpp  MainFrm.h  MyExplorer.cpp  MyExplorer.h  MyExplorer.rc  MyExplorerDoc.cpp  MyExplorerView.cpp  MyExplorerView.h  framework.h  resource.h
src/MyPing/: CMakeLists.txt  CPing.cpp  CPing.h  PythonEx.h  main.cpp
src/MyPlayer/: COCX1.cpp  COCX1.h  CWMPPlayer4.cpp  CWMPPlayer4.h  MyPlayer.cpp  MyPlayer.h  MyPlayer.rc  MyPlayerDlg.cpp  MyPlayerDlg.h  resource.h
src/MyPlayer/res/: MyPlayer.rc2
src/NetPacketTrace/: CMakeLists.txt  main.cpp
src/PythonTest/: CMakeLists.txt  main.cpp
src/ScreenCapture/: Resource.h  ScreenCapture.cpp  ScreenCapture.h  ScreenCapture.rc  ScreenCaptureDlg.cpp  ScreenCaptureDlg.h
src/ServMgr/: CServConfig.cpp  CServConfig.h  MainFrm.cpp  Resource.h  ServMgr.cpp  ServMgr.h  ServMgr.rc  ServMgrDoc.cpp  ServMgrDoc.h  ServMgrView.cpp  ServMgrView.h
src/ServMgr/res/: ServMgr.rc2
src/SetHookDll/: CMakeLists.txt  dllmain.cpp
src/ShutdownConsole/: main.cpp
src/ShutdownControl/: main.cpp
src/SmartQQAns/: main.cpp
src/SyncInternetTime/: SyncInternetTime.cpp  SyncInternetTime.h  SyncInternetTime.rc  SyncInternetTimeDlg.cpp  SyncInternetTimeDlg.h  resource.h
src/SyncInternetTime/res/: SyncInternetTime.rc2
src/assert/: dictionary.txt  ping_excel_writer.py
src/cmake/: CommonTools.cmake
src/memory_array_opencv/src/: main.cpp
